correct some typos

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 
 
         <h1>US Business and Labor Development Report</h1>
-        <p>The map shows provide essential business and labor development pattern on the county level, including employee concentration, the number of establishments, and the average payroll for different industries (NAICS industry). The data reflects the change of economic activity over 8 years. It provides useful measures for labor market potential, the effectiveness of government work and job training program. </p>
+        <p>The map provides essential business and labor development pattern on the county level, including employee concentration, the number of establishments, and the average payroll for different industries (NAICS industry). The data reflects the change of economic activity over 8 years. It provides useful measures for labor market potential, the effectiveness of government work and job training program. </p>
         <p>Note: Data Source from CBP Survey Programs</p>
         <hr>
         <span class="block"> Year:
